# tree-sitter-scala

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  diff.txt  go.mod  grammar.js  log-correct.html  log-error.html  log-error.txt  log-mine.html  log.html  log.txt  package-lock.json  package.json  pyproject.toml  setup.py  test.txt  tree-sitter.json  tree.txt
.github/workflows/: ci.yml  fuzz.yml  publish.yml  sync.yml
.metals/: metals.h2.db
bindings/c/: tree-sitter-scala.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_scala/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterScalaTests/: TreeSitterScalaTests.swift
corpus/: annotations.txt  definitions.txt  expressions.txt  identifiers.txt  literals.txt  patterns.txt  scala3.txt  types.txt
queries/: highlights.scm  tags.scm
queries/scala/: indents.scm  locals.scm
script/: smoke_test.sh
src/: grammar.json  node-types.json  parser.c  scanner.c  stack.h
test/: invalid-files.txt
test/corpus/: annotations.txt  comments.txt  definitions-pending.txt  definitions.txt  expressions-pending.txt  expressions.txt  literals.txt  patterns-pending.txt  patterns.txt  types-pending.txt  types.txt  xml.txt
test/highlight/: comments.scala  parameter_scope.scala  scala3.scala
test/tags/: basics.scala
