[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-scala"
description = "Scala grammar for tree-sitter"
version = "0.21.0"
keywords = ["incremental", "parsing", "tree-sitter", "scala"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[[project.authors]]
name = "Max Brunsfeld"
email = "maxbrunsfeld@gmail.com"

[[project.maintainers]]
name = "Amaan Qureshi"
email = "amaanq12@gmail.com"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-scala"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
